refactor: change api definitions
